# MiniFin

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  temp.txt
src/: app.html  global-style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  oldmain.rs  storage.rs
src-tauri/src/custom_console/: buffer_queue.rs  log_message.rs  macros.rs  mod.rs
src-tauri/src/tipos/: caixa_de_entrada.rs  empresa.rs  filtro_gasto.rs  fornecedor.rs  gasto.rs  mod.rs  setor.rs  sort_parameter.rs  tipo_de_pagamento.rs
src/lib/: armazenamento.ts  sDate.txt  utils.ts
src/lib/components/: Console.svelte  Dropdown.css  Dropdown.svelte  DropdownItem.svelte  EditorFornecedor.svelte  ExclusorGasto.svelte  FileChooser.svelte  Formulario.svelte  FormularioConfirmacao.svelte  ImportadorCSV.svelte  InputCaixa.svelte  InputData.svelte  InputEmpresa.svelte  InputFornecedor.svelte  InputNF.svelte  InputSetor.svelte  InputTipoPagamento.svelte  InputValor.svelte  LazyTable.svelte  NewDropdown.svelte  NewDropdownItem.svelte  PaginaFerramentas.svelte  ResultBox.svelte  ScrollBox.svelte  TabelaGastos.svelte  TopHeader.svelte
src/routes/: +layout.ts  +page.svelte
src/routes/ferramentas/: +page.svelte
src/routes/form/: +page.svelte
src/routes/instalacao/: +page.svelte
src/routes/main/: +page.svelte
src/routes/viz/: +page.svelte
static/json/: listarCaixas.json  listarEmpresas.json  listarFornecedores.json  listarGastos.json  listarPagamentos.json
