[package]
name = "minifin"
version = "0.1.0"
description = "Programa financeiro para pequenas empresas"
authors = ["Tito Guidotti"]
license = ""
repository = "https://github.com/titoco3000/MiniFin.git"
default-run = "minifin"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "dialog-all", "window-all"] }
sqlx = { version = "0.7", features = [ "chrono", "runtime-async-std", "sqlite" ] }
futures = "0.3.30"
toml = "0.8.8"
dirs-2 = "3.0.1"
simple-error = "0.3.0"
chrono = { version = "^0", features = ["serde"] }
csv = "1.3.0"
window-shadows = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
